spacing corrected

--- a/NiceWebsiteClone/Content/Homepage.css
+++ b/NiceWebsiteClone/Content/Homepage.css
@@ -18,12 +18,7 @@
 .dashboard, .dashboard-list, .border{
     background-color: #2f577a;
 }
-.dashboard h1{
 
-}
-button{
-    
-}
 .outter-dashboard{
     overflow:hidden;
     background-color: #4a4a4a;
@@ -36,7 +31,7 @@ form{
 }
 .dashboard{
     columns: 2;
-    width: 80%;
+    width: 100%;
     margin:0 auto;
     overflow:hidden;
     font-size: 20px;
